welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: ';' expected but 'else' found.
else if (weekday == true && vacation == false) {
^